// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CircularPicker Component basic render 1`] = `
<View
  onMoveShouldSetResponder={[Function]}
  onMoveShouldSetResponderCapture={[Function]}
  onResponderEnd={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderReject={[Function]}
  onResponderRelease={[Function]}
  onResponderStart={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  onStartShouldSetResponderCapture={[Function]}
  pointerEvents="box-only"
  style={
    Array [
      null,
      Object {
        "height": 274,
        "width": 274,
      },
    ]
  }
>
  <RNSVGSvgView
    style={
      Array [
        Object {
          "backgroundColor": "transparent",
        },
        undefined,
        false,
        Object {
          "flex": 0,
          "height": 274,
          "width": 274,
        },
      ]
    }
  >
    <RNSVGGroup
      fill={
        Array [
          0,
          0,
          0,
          0,
          1,
        ]
      }
      fillOpacity={1}
      fillRule={1}
      matrix={
        Array [
          1,
          0,
          0,
          1,
          0,
          0,
        ]
      }
      opacity={1}
      propList={Array []}
      stroke={null}
      strokeDasharray={null}
      strokeDashoffset={null}
      strokeLinecap={0}
      strokeLinejoin={0}
      strokeMiterlimit={4}
      strokeOpacity={1}
      strokeWidth={null}
    >
      <RNSVGCircle
        cx="137"
        cy="137"
        fill={
          Array [
            0,
            0,
            0,
            0,
            0,
          ]
        }
        fillOpacity={1}
        fillRule={1}
        matrix={
          Array [
            1,
            0,
            0,
            1,
            0,
            0,
          ]
        }
        opacity={1}
        propList={
          Array [
            "stroke",
            "strokeWidth",
            "strokeDasharray",
            "strokeDashoffset",
            "strokeLinecap",
            "fill",
          ]
        }
        r="115"
        stroke={
          Array [
            0,
            1,
            0,
            0,
            1,
          ]
        }
        strokeDasharray={
          Array [
            602.1385919380438,
            120.42771838760872,
          ]
        }
        strokeDashoffset={-240.85543677521744}
        strokeLinecap={1}
        strokeLinejoin={0}
        strokeMiterlimit={4}
        strokeOpacity={1}
        strokeWidth={40}
      />
    </RNSVGGroup>
  </RNSVGSvgView>
  <Image
    source={1}
    style={
      Array [
        Object {
          "alignItems": "center",
          "backgroundColor": "transparent",
          "justifyContent": "center",
          "position": "absolute",
          "transform": Array [
            Object {
              "translate": Array [
                0,
                0,
              ],
            },
          ],
        },
        Object {
          "borderRadius": 22,
          "height": 44,
          "opacity": 1,
          "transform": Array [
            Object {
              "translate": Array [
                115.00000000000003,
                230,
              ],
            },
          ],
          "width": 44,
        },
        null,
      ]
    }
  />
</View>
`;

exports[`CircularPicker Component should render disabled picker 1`] = `
<View
  onMoveShouldSetResponder={[Function]}
  onMoveShouldSetResponderCapture={[Function]}
  onResponderEnd={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderReject={[Function]}
  onResponderRelease={[Function]}
  onResponderStart={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  onStartShouldSetResponderCapture={[Function]}
  pointerEvents="box-only"
  style={
    Array [
      null,
      Object {
        "height": 235,
        "width": 235,
      },
    ]
  }
>
  <RNSVGSvgView
    style={
      Array [
        Object {
          "backgroundColor": "transparent",
        },
        undefined,
        false,
        Object {
          "flex": 0,
          "height": 235,
          "width": 235,
        },
      ]
    }
  >
    <RNSVGGroup
      fill={
        Array [
          0,
          0,
          0,
          0,
          1,
        ]
      }
      fillOpacity={1}
      fillRule={1}
      matrix={
        Array [
          1,
          0,
          0,
          1,
          0,
          0,
        ]
      }
      opacity={1}
      propList={Array []}
      stroke={null}
      strokeDasharray={null}
      strokeDashoffset={null}
      strokeLinecap={0}
      strokeLinejoin={0}
      strokeMiterlimit={4}
      strokeOpacity={1}
      strokeWidth={null}
    >
      <RNSVGCircle
        cx="117.5"
        cy="117.5"
        fill={
          Array [
            0,
            0,
            0,
            0,
            0,
          ]
        }
        fillOpacity={1}
        fillRule={1}
        matrix={
          Array [
            1,
            0,
            0,
            1,
            0,
            0,
          ]
        }
        opacity={1}
        propList={
          Array [
            "stroke",
            "strokeWidth",
            "strokeDasharray",
            "strokeDashoffset",
            "strokeLinecap",
            "fill",
          ]
        }
        r="115"
        stroke={
          Array [
            0,
            1,
            0,
            0,
            1,
          ]
        }
        strokeDasharray={
          Array [
            602.1385919380438,
            120.42771838760872,
          ]
        }
        strokeDashoffset={-240.85543677521744}
        strokeLinecap={1}
        strokeLinejoin={0}
        strokeMiterlimit={4}
        strokeOpacity={1}
        strokeWidth={1}
      />
      <RNSVGCircle
        cx="117.5"
        cy="117.5"
        fill={
          Array [
            0,
            0,
            0,
            0,
            0,
          ]
        }
        fillOpacity={1}
        fillRule={1}
        matrix={
          Array [
            1,
            0,
            0,
            1,
            0,
            0,
          ]
        }
        opacity={1}
        propList={
          Array [
            "stroke",
            "strokeWidth",
            "strokeDasharray",
            "strokeDashoffset",
            "strokeLinecap",
            "fill",
          ]
        }
        r="115"
        stroke={
          Array [
            0,
            0,
            0,
            1,
            1,
          ]
        }
        strokeDasharray={
          Array [
            0,
            722.5663103256525,
          ]
        }
        strokeDashoffset={-240.85543677521744}
        strokeLinecap={1}
        strokeLinejoin={0}
        strokeMiterlimit={4}
        strokeOpacity={1}
        strokeWidth={1}
      />
    </RNSVGGroup>
  </RNSVGSvgView>
  <Image
    source={1}
    style={
      Array [
        Object {
          "alignItems": "center",
          "backgroundColor": "transparent",
          "justifyContent": "center",
          "position": "absolute",
          "transform": Array [
            Object {
              "translate": Array [
                0,
                0,
              ],
            },
          ],
        },
        Object {
          "borderRadius": 2.5,
          "height": 5,
          "opacity": 0,
          "transform": Array [
            Object {
              "translate": Array [
                115.00000000000003,
                230,
              ],
            },
          ],
          "width": 5,
        },
        null,
      ]
    }
  />
</View>
`;

exports[`CircularPicker Component should render picker 1`] = `
<View
  onMoveShouldSetResponder={[Function]}
  onMoveShouldSetResponderCapture={[Function]}
  onResponderEnd={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderReject={[Function]}
  onResponderRelease={[Function]}
  onResponderStart={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  onStartShouldSetResponderCapture={[Function]}
  pointerEvents="box-only"
  style={
    Array [
      null,
      Object {
        "height": 235,
        "width": 235,
      },
    ]
  }
>
  <RNSVGSvgView
    style={
      Array [
        Object {
          "backgroundColor": "transparent",
        },
        undefined,
        false,
        Object {
          "flex": 0,
          "height": 235,
          "width": 235,
        },
      ]
    }
  >
    <RNSVGGroup
      fill={
        Array [
          0,
          0,
          0,
          0,
          1,
        ]
      }
      fillOpacity={1}
      fillRule={1}
      matrix={
        Array [
          1,
          0,
          0,
          1,
          0,
          0,
        ]
      }
      opacity={1}
      propList={Array []}
      stroke={null}
      strokeDasharray={null}
      strokeDashoffset={null}
      strokeLinecap={0}
      strokeLinejoin={0}
      strokeMiterlimit={4}
      strokeOpacity={1}
      strokeWidth={null}
    >
      <RNSVGCircle
        cx="117.5"
        cy="117.5"
        fill={
          Array [
            0,
            0,
            0,
            0,
            0,
          ]
        }
        fillOpacity={1}
        fillRule={1}
        matrix={
          Array [
            1,
            0,
            0,
            1,
            0,
            0,
          ]
        }
        opacity={1}
        propList={
          Array [
            "stroke",
            "strokeWidth",
            "strokeDasharray",
            "strokeDashoffset",
            "strokeLinecap",
            "fill",
          ]
        }
        r="115"
        stroke={
          Array [
            0,
            1,
            0,
            0,
            1,
          ]
        }
        strokeDasharray={
          Array [
            602.1385919380438,
            120.42771838760872,
          ]
        }
        strokeDashoffset={-240.85543677521744}
        strokeLinecap={1}
        strokeLinejoin={0}
        strokeMiterlimit={4}
        strokeOpacity={1}
        strokeWidth={1}
      />
      <RNSVGCircle
        cx="117.5"
        cy="117.5"
        fill={
          Array [
            0,
            0,
            0,
            0,
            0,
          ]
        }
        fillOpacity={1}
        fillRule={1}
        matrix={
          Array [
            1,
            0,
            0,
            1,
            0,
            0,
          ]
        }
        opacity={1}
        propList={
          Array [
            "stroke",
            "strokeWidth",
            "strokeDasharray",
            "strokeDashoffset",
            "strokeLinecap",
            "fill",
          ]
        }
        r="115"
        stroke={
          Array [
            0,
            0,
            0,
            1,
            1,
          ]
        }
        strokeDasharray={
          Array [
            0,
            722.5663103256525,
          ]
        }
        strokeDashoffset={-240.85543677521744}
        strokeLinecap={1}
        strokeLinejoin={0}
        strokeMiterlimit={4}
        strokeOpacity={1}
        strokeWidth={1}
      />
    </RNSVGGroup>
  </RNSVGSvgView>
  <Image
    source={1}
    style={
      Array [
        Object {
          "alignItems": "center",
          "backgroundColor": "transparent",
          "justifyContent": "center",
          "position": "absolute",
          "transform": Array [
            Object {
              "translate": Array [
                0,
                0,
              ],
            },
          ],
        },
        Object {
          "borderRadius": 2.5,
          "height": 5,
          "opacity": 1,
          "transform": Array [
            Object {
              "translate": Array [
                115.00000000000003,
                230,
              ],
            },
          ],
          "width": 5,
        },
        null,
      ]
    }
  />
</View>
`;
